@@ -1,136 +1,148 @@
 package com.jemersoft.pokechallenge.service.impl;
 
-import com.jemersoft.pokechallenge.model.response.ApiResponse.ApiPokemon;
-import com.jemersoft.pokechallenge.model.response.ApiResponse.ApiPokemonDetails;
-import com.jemersoft.pokechallenge.model.response.ApiResponse.ApiPokemonResults;
-import com.jemersoft.pokechallenge.model.response.ApiResponse.ApiPokemonListResponse;
-import com.jemersoft.pokechallenge.model.response.myResponse.MyPokemonListResponse;
-import com.jemersoft.pokechallenge.model.response.myResponse.MyPokemonResponse;
+import com.jemersoft.pokechallenge.exception.customExceptions.BadRequestException;
+import com.jemersoft.pokechallenge.exception.customExceptions.NotFoundException;
+import com.jemersoft.pokechallenge.model.response.apiresponse.ApiPokemon;
+import com.jemersoft.pokechallenge.model.response.apiresponse.ApiPokemonDetails;
+import com.jemersoft.pokechallenge.model.response.apiresponse.ApiPokemonResults;
+import com.jemersoft.pokechallenge.model.response.apiresponse.ApiPokemonListResponseBody;
+import com.jemersoft.pokechallenge.model.response.myresponse.MyPokemonListResponse;
+import com.jemersoft.pokechallenge.model.response.myresponse.MyPokemonResponse;
 import com.jemersoft.pokechallenge.service.abs.PokemonService;
-import lombok.Data;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
-@Data
+@RequiredArgsConstructor
+@Slf4j
 public class PokemonServiceImpl implements PokemonService {
 
-
-    private RestTemplate httpClient = new RestTemplate();
+//    @Value("${pokeapi.base-url}")
+//    private final String BASE_URL;
+    private static final String BASE_URL = "https://pokeapi.co/api/v2";
+    private static final String BAD_REQUEST = "Bad Request";
+    private static final String POKE_NOT_FOUND = "Pokemon Not Found";
+    private final RestTemplate httpClient = new RestTemplate();
 
     @Override
-    public List<MyPokemonListResponse> findAll(String offset, String limit) {
+    public List<MyPokemonListResponse> findAll(String offset, String limit) throws BadRequestException {
 
-        String requestUrl = "https://pokeapi.co/api/v2/pokemon?offset=" + offset + "&limit=" + limit;
+        String requestUrl = BASE_URL + "/pokemon?offset=" + offset + "&limit=" + limit;
 
-        Optional<ResponseEntity<ApiPokemonListResponse>> apiPokemonListResponse = Optional.of(httpClient.exchange(requestUrl, HttpMethod.GET, null, ApiPokemonListResponse.class));
+        try {
+            ResponseEntity<ApiPokemonListResponseBody> apiPokemonListResponse = httpClient.exchange(requestUrl, HttpMethod.GET, null, ApiPokemonListResponseBody.class);
 
-        apiPokemonListResponse.orElseThrow();
+            ApiPokemonListResponseBody apiPokemonListBody = Optional.ofNullable(apiPokemonListResponse.getBody()).orElseThrow(()-> new NullPointerException("Response body is null"));
 
+            List<ApiPokemonResults> apiPokemonResults = apiPokemonListBody.getResults();
 
-        Optional<ApiPokemonListResponse> apiPokemonListBody = Optional.of(apiPokemonListResponse.get().getBody());
+            List<ApiPokemon> apiPokemonList =  apiPokemonResults
+                    .stream().map(pokemonNameUrl -> detailsHttpRequest(pokemonNameUrl.getName(), false))
+                    .toList();
 
-        apiPokemonListBody.orElseThrow();
+             return MyPokemonListResponse.toResponse(apiPokemonList);
 
-        List<ApiPokemonResults> apiPokemonResults = apiPokemonListBody.get().getResults();
+        } catch (HttpClientErrorException.BadRequest e) {
+            throw new BadRequestException(BAD_REQUEST, e);
+        }
 
-        List<ApiPokemon> apiPokemonList = new ArrayList<>();
-
-        apiPokemonResults.stream()
-                .forEach(pokemonNameUrl -> {
-
-                    ApiPokemon apiPokemon = detailsHttpRequest(pokemonNameUrl.getName(), false);
-
-                    apiPokemonList.add(apiPokemon);
-                });
-
-
-        System.out.println("LISTA " + apiPokemonList);
-
-         return MyPokemonListResponse.toResponse(apiPokemonList);
     }
-
-
 
     @Override
     public MyPokemonResponse getDetails(String name, String language) {
+        // Fetch Pokemon details:
         ApiPokemon apiPokemonDetails = detailsHttpRequest(name, true);
 
+        // Fetch Pokemon descriptions:
         List<String> apiPokemonDescriptionNames = getDescriptionHttp(name, language);
 
+        // Add descriptions to Pokémon details:
         apiPokemonDetails.setDescriptions(apiPokemonDescriptionNames);
 
         return MyPokemonResponse.toResponse(apiPokemonDetails);
     }
 
-    public List<String> getDescriptionHttp(String pokemonName, String language){
-        String descriptionUrl = "https://pokeapi.co/api/v2/pokemon-species/" + pokemonName;
+    public List<String> getDescriptionHttp(String pokemonName, String language) throws NotFoundException, BadRequestException {
+        String descriptionUrl = BASE_URL + "/pokemon-species/" + pokemonName;
 
-        ResponseEntity<ApiPokemonDetails> apiPokemonDescriptionResponse = Optional.of(httpClient.exchange(descriptionUrl, HttpMethod.GET, null, ApiPokemonDetails.class)).orElseThrow();
+        try {
 
-        ApiPokemonDetails apiPokemonDescription = Optional.of(apiPokemonDescriptionResponse.getBody()).orElseThrow();
+            ResponseEntity<ApiPokemonDetails> apiPokemonDescriptionResponse = httpClient.exchange(descriptionUrl, HttpMethod.GET, null, ApiPokemonDetails.class);
 
-        List<String> apiFilteredDescriptionNames = apiPokemonDescription.getDescriptions().stream()
-                .filter(apiDescription -> apiDescription.getLanguageName().equals(language))
-                .map(apiDescription -> apiDescription.getDescriptionText())
-                .toList();
+            ApiPokemonDetails apiPokemonDescription = Optional.ofNullable(apiPokemonDescriptionResponse.getBody()).orElseThrow(()-> new NullPointerException("Response Body is null"));
 
-        return apiFilteredDescriptionNames;
+            return apiPokemonDescription.getDescriptions().stream()
+                    .filter(apiDescription -> apiDescription.getLanguageName().equals(language))
+                    .map(apiDescription -> {
+                        String description = apiDescription.getDescriptionText();
+                        return description.replace("\n", " ").replace("\f", " ");
+                    })
+                    .toList();
 
+        } catch (HttpClientErrorException.NotFound e) {
+            throw new NotFoundException(POKE_NOT_FOUND, e);
+        } catch (HttpClientErrorException.BadRequest e) {
+            throw new BadRequestException(BAD_REQUEST, e);
+        }
     }
 
-    public ApiPokemon detailsHttpRequest(String pokemonName, boolean getMoves){
+    public ApiPokemon detailsHttpRequest(String pokemonName, boolean getMoves) throws NotFoundException, BadRequestException {
 
-        String detailsUrl = "https://pokeapi.co/api/v2/pokemon/" + pokemonName;
+        String detailsUrl = BASE_URL + "/pokemon/" + pokemonName;
 
-        ResponseEntity<ApiPokemonDetails> apiPokemonDetailsResponse = Optional.of(httpClient.exchange(detailsUrl, HttpMethod.GET, null, ApiPokemonDetails.class)).orElseThrow();
+        try {
 
-        ApiPokemonDetails apiPokemonDetails = Optional.of(apiPokemonDetailsResponse.getBody()).orElseThrow();
+        ResponseEntity<ApiPokemonDetails> apiPokemonDetailsResponse = httpClient.exchange(detailsUrl, HttpMethod.GET, null, ApiPokemonDetails.class);
 
-        // System.out.println("DETAILS " + apiPokemonDetails);
+            ApiPokemonDetails apiPokemonDetails = Optional.ofNullable(apiPokemonDetailsResponse.getBody()).orElseThrow(()-> new NullPointerException("Response Body is null"));
 
-        ApiPokemon apiPokemon = new ApiPokemon();
+            ApiPokemon apiPokemon = new ApiPokemon();
 
-        // Name
-        apiPokemon.setName(apiPokemonDetails.getName());
+            // Name
+            apiPokemon.setName(apiPokemonDetails.getName());
 
-        // Photo
-        apiPokemon.setImageUrl(apiPokemonDetails.getSprites().getOther().getDream_world().getFront_default());
+            // Weight
+            apiPokemon.setWeight(apiPokemonDetails.getWeight());
 
-        // Types
-        List<String> typeNames = apiPokemonDetails.getTypes().stream()
-                .map(apiType -> apiType.getType().get("name"))
-                .collect(Collectors.toList());
+            // Photo
+            apiPokemon.setImageUrl(apiPokemonDetails.getSprites().getOther().getDream_world().getFront_default());
 
-        apiPokemon.setTypes(typeNames);
+            // Types
+            List<String> typeNames = apiPokemonDetails.getTypes().stream()
+                    .map(apiType -> apiType.getType().get("name"))
+                    .toList();
+            apiPokemon.setTypes(typeNames);
 
-        // Weight
-        apiPokemon.setWeight(apiPokemonDetails.getWeight());
+            // Abilities
+            List<String> abilitiesNames = apiPokemonDetails.getAbilities().stream()
+                    .map(apiAbility -> apiAbility.getAbility().get("name"))
+                    .toList();
+            apiPokemon.setAbilities(abilitiesNames);
 
-        // Abilities
-        List<String> abilitiesNames = apiPokemonDetails.getAbilities().stream()
-                .map(apiAbility -> apiAbility.getAbility().get("name"))
-                .collect(Collectors.toList());
+            // Moves
+            if (getMoves) {
+                List<String> movesNames = apiPokemonDetails.getMoves().stream()
+                        .map(apiMove -> apiMove.getMove().get("name"))
+                        .toList();
+                apiPokemon.setMoves(movesNames);
+            }
 
-        apiPokemon.setAbilities(abilitiesNames);
+            return apiPokemon;
 
-        // Moves
-        if (getMoves == true) {
-            List<String> movesNames = apiPokemonDetails.getMoves().stream()
-                    .map(apiMove -> apiMove.getMove().get("name"))
-                    .collect(Collectors.toList());
-
-            apiPokemon.setMoves(movesNames);
+        } catch (HttpClientErrorException.NotFound e) {
+            throw new NotFoundException(POKE_NOT_FOUND, e);
+        } catch (HttpClientErrorException.BadRequest e) {
+            throw new BadRequestException(BAD_REQUEST, e);
         }
-
-        return apiPokemon;
     }
 
 }
